--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
     <hr>
 
-<!-- Popular destinations -->
+<!-- Accoordion -->
     <div class="mt-4 p-3 bg-color2 text-white text-center rounded">
       <h2>Popular destinations in Egypt</h2>
     </div>
@@ -257,9 +257,9 @@
             <h2 class="fs-1 ">Popular destinations in Egypt</h2>
           </div>
 
-            <div class="row  justify-content-md-center ps-5 position-relative  ">
+            <div class="row  justify-content-md-center ps-5 position-relative dest-section">
               
-              <div class="col-lg-4 col-sm-12 p-4">
+              <div class="col-lg-4 col-sm-12 pt-4">
                 <div class="card card1 shadow ms-4" style="width:22rem; ">
                   <img src="images/cairo.jpg" class="card-img-top px-2" style="height: 27rem;" alt="...">
                   <div class="card-body">
@@ -270,7 +270,7 @@
                 </div>
               </div>
 
-              <div class="col-lg-4 col-sm-12 p-4">
+              <div class="col-lg-4 col-sm-12 pt-4">
                 <div class="card card1 shadow ms-4" style="width:22rem; ">
                   <img src="images/Alexandria-City-Egypt-Egypt-Tours-Portal.jpg" class="card-img-top px-2" style="height: 27rem;"  alt="...">
                   <div class="card-body">
@@ -281,7 +281,7 @@
                 </div>
               </div>
 
-              <div class="col-lg-4 col-sm-12 p-4">
+              <div class="col-lg-4 col-sm-12 pt-4">
                 <div class="card card1 shadow ms-4" style="width:22rem; ">
                   <img src="images/luxr.jpg" class="card-img-top px-2" style="height: 27rem;" alt="...">
                   <div class="card-body">
@@ -292,7 +292,7 @@
                 </div>
               </div>
 
-              <div class="col-lg-4 col-sm-12 p-4">
+              <div class="col-lg-4 col-sm-12 pt-4">
                 <div class="card card1 shadow ms-4" style="width:22rem; ">
                   <img src="images/Historical-Role-of-the-Nile-River-Egypt-Tours-Portal.jpg" class="card-img-top px-2" style="height: 27rem;" alt="...">
                   <div class="card-body">
@@ -303,7 +303,7 @@
                 </div>
               </div>
 
-              <div class="col-lg-4 col-sm-12 p-4">
+              <div class="col-lg-4 col-sm-12 pt-4">
                 <div class="card card1 shadow ms-4" style="width:22rem; ">
                   <img src="images/newcapital.jpeg" class="card-img-top px-2" style="height: 27rem;" alt="...">
                   <div class="card-body">
@@ -314,7 +314,7 @@
                 </div>
               </div>
 
-              <div class="col-lg-4 col-sm-12 p-4">
+              <div class="col-lg-4 col-sm-12 pt-4">
                 <div class="card card1 shadow ms-4" style="width:22rem; ">
                   <img src="images/rixos-sharm-el-sheikh.jpg" class="card-img-top px-2" style="height: 27rem;" alt="...">
                   <div class="card-body">
@@ -325,7 +325,7 @@
                 </div>
               </div>
 
-              <div class="col-lg-4 col-sm-12 p-4">
+              <div class="col-lg-4 col-sm-12 pt-4">
                 <div class="card card1 shadow ms-4" style="width:22rem; ">
                   <img src="images/siwa.jpg" class="card-img-top px-2" style="height: 27rem;" alt="...">
                   <div class="card-body">
@@ -336,7 +336,7 @@
                 </div>
               </div>
 
-              <div class="col-lg-4 col-sm-12 p-4">
+              <div class="col-lg-4 col-sm-12 py-4">
                 <div class="card card1 shadow ms-4" style="width:22rem; ">
                   <img src="images/Hurghada-marina.jpg" class="card-img-top px-2" style="height: 27rem;" alt="...">
                   <div class="card-body">
@@ -359,7 +359,7 @@
           <h2 class="fs-1 ">Discoveries in History</h2>
         </div>
 
-          <div class="row  justify-content-md-center  p-5 position-relative">
+          <div class="row  justify-content-md-center  p-5 position-relative disc-section">
             <div class="hov-card2 col-lg-4 col-sm-12 ">
               <div class="card2 card21 shadow ms-4 ">
                 <div class="overlay p-4">
@@ -503,6 +503,7 @@
     </div>
   </div>
   
+  <!-- Join us -->
   <div class="p-3 gradient-text text-center  rounded">
     <h2 class="fs-1 ">JOIN US</h2>
   </div>
@@ -582,6 +583,3 @@
 
   </body>
 </html>
-
-
-
