--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
         </div>
       </div>
     </div>
-    <div class="bg-img" style="height: 22rem;"></div>
+    <div class="bg-img" style="height: 20rem; width: 100%;"></div>
 
 <!-- Popular destinations -->
     <section class="bg-light">
@@ -350,7 +350,7 @@
             </div>
         </div>
     </section>
-    <div class="bg-img mb-4" style="height: 18rem;"></div>
+    <div class="bg-img mb-4" style="height: 20rem; width: 100%;"></div>
     <hr>
 
 <!-- Discoveries -->
@@ -360,7 +360,7 @@
         </div>
 
           <div class="row  justify-content-md-center  p-5 position-relative disc-section">
-            <div class="hov-card2 col-lg-4 col-sm-12 ">
+            <div class="hov-card2 col-lg-4 col-sm-12 disc-section">
               <div class="card2 card21 shadow ms-4 ">
                 <div class="overlay p-4">
                   <h4>Rosseta Stone</h4>
@@ -372,7 +372,7 @@
               </div>
             </div>
 
-            <div class="hov-card2 col-lg-4 col-sm-12 ">
+            <div class="hov-card2 col-lg-4 col-sm-12 disc-section">
               <div class="card2 card22 shadow ms-4 ">
                 <div class="overlay p-4">
                   <h4>Tot Ankh Amon Grave</h4>
@@ -384,7 +384,7 @@
               </div>
             </div>
 
-            <div class="hov-card2 col-lg-4 col-sm-12 ">
+            <div class="hov-card2 col-lg-4 col-sm-12 disc-section">
               <div class="card2 card23 shadow ms-4 ">
                 <div class="overlay p-4">
                   <h4>Appreciation and respect</h4>
